--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
       rel="stylesheet"
     />
+    <style>
+      html {
+        visibility: hidden;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <div class="page-header text-center">
         <h1>Calendar</h1>
-        <!-- <h3>User: <?php echo $SERVER_VARS['username']; ?></h3> -->
+        <h3 id="username"></h3>
       </div>
 
       <hr />
